addons/kustomize/oss/kyverno/base/deny-daemonsets/.kyverno-test/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant
  labels:
    platform.local/namespace: tenant
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: bad
  namespace: tenant
  labels:
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/type: kustomize
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: good
  namespace: default
  labels:
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/type: kustomize
